--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-router": "^3.2.0",
     "vue-session": "^1.0.0",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
